# qualitara-assignment

./: .env.example  .gitignore  ADR.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/commands/: tdd_session.md
.claude/plans/: fleet-telemetry-implementation-plan.md
.claude/skills/practicing-tdd/: SKILL.md  best-practices.md
ai-log/: AI-interaction-log-db-design.md  ai-interaction-log-dashboard.md  db-design-main-prompt.md  main-implementation-plan-prompt.md  realtime-dashboard-main-prompt.md
arch/: ADR-001-realtime-dashboard-architecture.md  ADR-002-database-and-concurrency.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_telemetry_contradicts_maintenance.py
backend/app/: anomalies.py  config.py  db.py  main.py  models.py  pubsub.py  realtime.py  schemas.py  sessions.py  zones.py
backend/app/routes/: anomalies.py  fleet.py  stream.py  telemetry.py  vehicles.py  zones.py
backend/app/services/: faults.py  fleet.py  telemetry.py  zones.py
backend/tests/: conftest.py
backend/tests/integration/: test_fault_transition.py  test_pubsub_fanout.py  test_telemetry_ingest.py
backend/tests/unit/: test_anomalies.py
frontend/: Dockerfile  jest.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: FaultInjector.tsx  FleetAggregate.tsx  VehicleDetail.tsx  VehicleList.tsx  ZoneCounts.tsx
frontend/src/hooks/: useEventStream.ts  useFleetState.ts
frontend/tests/: FaultInjector.test.tsx  FleetAggregate.test.tsx  VehicleList.test.tsx  ZoneCounts.test.tsx  useEventStream.test.tsx
nginx/: nginx.conf
